--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
         margin: 0;
         padding: 0;
         /* overflow-x: hidden; */
+         /* overflow-x: hidden; */
         font-family: "Roboto", sans-serif;
       }
     </style>
